force-app/main/default/objects/Retail_Outlet__c/Retail_Outlet__c.object-meta.xml
<CustomObject>
    <label>Retail Outlet</label>
    <nameField>
        <label>Outlet Code</label>
        <type>AutoNumber</type>
        <displayFormat>{0000}</displayFormat>
    </nameField>
    <pluralLabel>Retail Outlets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>