force-app/main/default/objects/Retail_Outlet__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Retail Outlets</relationshipLabel>
    <relationshipName>Retail_Outlets</relationshipName>
    <type>Lookup</type>
</CustomField>