force-app/main/default/objects/Retail_Outlet__c/fields/C_Store__c.field-meta.xml
<CustomField>
    <fullName>C_Store__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C Store</label>
    <type>Checkbox</type>
</CustomField>