force-app/main/default/objects/Retail_Outlet__c/fields/Car_Wash__c.field-meta.xml
<CustomField>
    <fullName>Car_Wash__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Car Wash</label>
    <type>Checkbox</type>
</CustomField>