force-app/main/default/objects/Retail_Outlet__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Retail Outlets</relationshipLabel>
    <relationshipName>Retail_Outlets</relationshipName>
    <type>Lookup</type>
</CustomField>