force-app/main/default/objects/Retail_Outlet__c/fields/Fuel_Tank_Count__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Tank_Count__c</fullName>
    <label>Fuel Tank Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>