force-app/main/default/objects/Retail_Outlet__c/fields/Fuel_Volume_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Volume_Monthly__c</fullName>
    <label>Fuel Volume Monthly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>